# esp32_airmouse

./: CMakeLists.txt  Makefile  README.md  sdkconfig
components/MPU6050/: MPU6050.cpp  MPU6050_6Axis_MotionApps20.h
components/nkolban_BLE/: GeneralUtils.cpp  HID_kbdmousejoystick.cpp  HID_kbdmousejoystick.h
main/: CMakeLists.txt  ble_hidd_demo_main.cpp  ble_hidd_demo_main.cpp.old  config.h  main.cpp
main/I2Cdev/: I2Cdev.cpp
main/MPU6050/: MPU6050_6Axis_MotionApps20.h
main/ble_hid/: hal_ble.c  hal_ble.h
